// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`using a bank card should submit a form to the correct place 1`] = `
FormData {
  Symbol(impl): FormDataImpl {
    "_entries": Array [
      Object {
        "name": "billing-cc-number",
        "type": "text",
        "value": "",
      },
      Object {
        "name": "billing-cc-exp",
        "type": "text",
        "value": "",
      },
    ],
    Symbol(wrapper): [Circular],
  },
}
`;

exports[`using a credit card should submit a form to the correct place 1`] = `
FormData {
  Symbol(impl): FormDataImpl {
    "_entries": Array [
      Object {
        "name": "billing-cc-number",
        "type": "text",
        "value": "4111111111111111",
      },
      Object {
        "name": "billing-cc-exp",
        "type": "text",
        "value": "07/19",
      },
      Object {
        "name": "billing-cvv",
        "type": "text",
        "value": "001",
      },
    ],
    Symbol(wrapper): [Circular],
  },
}
`;
